--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,22 +1,53 @@
+---
+import Header from "../components/Header.astro"
+import Experiencia from "../components/Experiencia.astro"
+---
+
 <!doctype html>
-<html lang="en">
+<html lang="es">
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+		<link rel="icon" type="image/svg+xml" href="./src/assets/images/imagenCV.jpg" />
 		<meta name="generator" content={Astro.generator} />
-		<title>Astro Basics</title>
+		<title>Portafolio - José Calderón</title>
 	</head>
+
 	<body>
+		<div class="fixed inset-0 -z-10 h-full w-full items-center px-5 py-24 [background:radial-gradient(125%_125%_at_50%_10%,#000_40%,#63e_100%)]"></div>
+		<Header />
 		<slot />
 	</body>
+
 </html>
 
-<style>
-	html,
-	body {
-		margin: 0;
-		width: 100%;
-		height: 100%;
+
+
+<style is:global>
+	:root{
+		color-scheme: light dark;
+	}
+
+	html{
+		font-family: 'Trebuchet MS';
+		scroll-behavior: smooth;
+	}
+	body{
+		display: flex;
+		flex-direction: column;
+		min-height: 100vh;
+		overflow-x: hidden;
+	}
+	@media (prefers-reduced-motion: reduce){
+		html{
+			scroll-behavior: auto;
+		}
+	}
+
+	@media (max-width: 768px) {
+		html {
+			font-size: 14px;
+		}
 	}
 </style>
+
