--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -17,7 +17,7 @@ import Proyectos from "../components/Proyectos.astro";
 		<section id="inicio" class="mx-auto pt-32 pb-5 max-w-[740px]">
 			<div class="flex flex-row gap-4 mb-4">
 				<img
-					src="./src/assets/images/imagenCV.jpg"
+					src="/portfolio-2025/src/assets/images/imagenCV.jpg"
 					class="size-20 rounded-full"
 					alt="Foto José Calderón"
 				/>
@@ -147,7 +147,7 @@ import Proyectos from "../components/Proyectos.astro";
 				<div class="md:w-1/3 order-1 md:order-1">
 					<img
 						class="w-full max-w-[250px] h-auto object-cover rotate-2 rounded-3xl border-4 border-green-600"
-							src="./src/assets/images/portfolio.jpg"
+							src="/portfolio-2025/src/assets/images/portfolio.jpg"
 							alt="Portfolio"
 					/>
 				</div>
