--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -6,6 +6,7 @@ import Experiencia from "../components/Experiencia.astro"
 <!doctype html>
 <html lang="es">
 	<head>
+		<base href="/porfolio-2025/">
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/svg+xml" href="./src/assets/images/imagenCV.jpg" />
