--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -11,7 +11,7 @@ import Experiencia from "../components/Experiencia.astro"
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/svg+xml" href="./src/assets/images/imagenCV.jpg" />
 		<meta name="generator" content={Astro.generator} />
-		<title>Portafolio - José Calderón</title>
+		<title>Porfolio - José Calderón</title>
 	</head>
 
 	<body>
