--- a/src/components/Proyectos.astro
+++ b/src/components/Proyectos.astro
@@ -43,7 +43,7 @@ import Tecnologias from "../components/Tecnologias.astro";
     <article class="flex flex-col md:flex-row gap-4 max-w-7xl">
         <img
             class="rounded-lg w-[500px] md:w-[400px] md:h-[350px] aspect-video object-cover hover:-rotate-2 hover:scale-[1.02] transition-all duration-300"
-            src="/portfolio-2025/src/assets/images/musicPro.png"
+            src="./src/assets/images/musicPro.png"
             alt="Proyecto PanaP - Proyecto de título"
         />
         <div class="flex-1 flex flex-col gap-4">
