--- a/src/components/Proyectos.astro
+++ b/src/components/Proyectos.astro
@@ -9,7 +9,7 @@ import Tecnologias from "../components/Tecnologias.astro";
     <article class="flex flex-col items-center md:flex-row gap-4 max-w-7xl">
         <img
             class="rounded-lg w-[500px] md:w-[400px] md:h-[350px] aspect-video object-cover hover:rotate-2 hover:scale-[1.02] transition-all duration-300"
-            src="https://josecalderon7.github.io/porfolio-2025/images/imagenProyectoPanaP.png"
+            src="/porfolio-2025/images/imagenProyectoPanaP.png"
             alt="Proyecto PanaP - Proyecto de título"
         />
         <div class="flex-1 flex flex-col gap-4 items-start">
