Cambios de diseño y mejoras
Se incorporan mejoras en la page principal y diseño correcto del Readme.

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -9,7 +9,7 @@ import Experiencia from "../components/Experiencia.astro"
 		<base href="/porfolio-2025/">
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" type="image/svg+xml" href="./src/assets/images/imagenCV.jpg" />
+		<link rel="icon" type="image/svg+xml" href="/porfolio-2025/images/imagenCV.jpg" />
 		<meta name="generator" content={Astro.generator} />
 		<title>Porfolio - José Calderón</title>
 	</head>
@@ -26,7 +26,7 @@ import Experiencia from "../components/Experiencia.astro"
 
 <style is:global>
 	:root{
-		color-scheme: light dark;
+		color-scheme: dark;
 	}
 
 	html{
