--- a/src/components/Experiencia.astro
+++ b/src/components/Experiencia.astro
@@ -1,8 +1,8 @@
 
-<ol class="relative border-s border-gray-300 dark:border-gray-600 opacity-100">                  
+<ol class="relative border-s border-gray-600 opacity-100">                  
     <li class="mb-10 ms-4">
-        <div class="absolute w-3 h-3 bg-green-200 rounded-full mt-1.5 -start-1.5 border border-green dark:border-green-400 dark:bg-green-300"></div>
-        <time class="mb-1 text-sm font-normal leading-none text-gray-400 dark:text-gray-300 italic">Octubre 2024 - Diciembre 2024</time>
+        <div class="absolute w-3 h-3 rounded-full mt-1.5 -start-1.5 border border-green-400 bg-green-300"></div>
+        <time class="mb-1 text-sm font-normal leading-none text-gray-300 italic">Octubre 2024 - Diciembre 2024</time>
         <h3 class="text-xl font-semibold text-green-400 mb-2">Desarrollador FullStack - Imagine Pro</h3>
         <p class="mb-2 text-lg font-normal text-gray-200 text-pretty max-w-[820px]">
             Ticketera para la gestión de eventos, promociones, venta y postventa.
@@ -23,8 +23,8 @@
   </svg></a>
     </li>
     <li class="mb-10 ms-4">
-        <div class="absolute w-3 h-3 bg-green-200 rounded-full mt-1.5 -start-1.5 border border-green dark:border-green-400 dark:bg-green-300"></div>
-        <time class="mb-1 text-sm font-normal leading-none text-gray-400 dark:text-gray-300 italic">Junio 2018 - Julio 2024</time>
+        <div class="absolute w-3 h-3 rounded-full mt-1.5 -start-1.5 border border-green-400 bg-green-300"></div>
+        <time class="mb-1 text-sm font-normal leading-none text-gray-300 italic">Junio 2018 - Julio 2024</time>
         <h3 class="text-xl font-semibold text-green-400 mb-2">Vendedor - 'Ceramicas Mi Chanchita'</h3>
         <ul class="mb-4 text-lg font-normal text-gray-200 text-pretty max-w-[820px]">
             <li>- Gestión integral del proceso de ventas. </li>
