--- a/src/components/Proyectos.astro
+++ b/src/components/Proyectos.astro
@@ -13,15 +13,15 @@ import Tecnologias from "../components/Tecnologias.astro";
             alt="Proyecto PanaP - Proyecto de título"
         />
         <div class="flex-1 flex flex-col gap-4 items-start">
-            <h3 class="text-2xl font-semibold text-green-400">
+            <h3 class="text-2xl font-semibold text-green-300">
                 Proyecto de título - PanaP
             </h3>
             <p class="text-lg opacity-95 max-w-xl">
                 PanaP es una aplicación móvil única que conecta a usuarios con
-                negocios locales, mostrando en tiempo real la disponibilidad de
-                pan y permitiendo reservas para asegurar compras. Optimiza la
-                gestión diaria de comerciantes, reduce desperdicios y mejora la
-                experiencia de compra, promoviendo un comercio más eficiente y
+                negocios locales, <strong class="text-green-400">mostrando en tiempo real la disponibilidad</strong> de
+                pan y <strong class="text-green-400">permitiendo reservas</strong> para asegurar compras. Optimiza la
+                gestión diaria de comerciantes, <strong class="text-green-400">reduce desperdicios y mejora la
+                experiencia de compra</strong>, promoviendo un comercio más eficiente y
                 sostenible.
             </p>
             <div class="flex gap-4 mt-auto">
@@ -47,14 +47,14 @@ import Tecnologias from "../components/Tecnologias.astro";
             alt="Proyecto PanaP - Proyecto de título"
         />
         <div class="flex-1 flex flex-col gap-4">
-            <h3 class="text-2xl font-semibold text-green-400">
+            <h3 class="text-2xl font-semibold text-green-300">
                 Ecommerce con Django - MusicPro
             </h3>
             <p class="text-lg opacity-95 max-w-xl">
                 MusicPro es una plataforma web
-                destinada a la venta de productos musicales. Podemos
+                destinada a la <strong class="text-green-400">venta de productos musicales</strong>. Podemos
                 registrarnos y obtener descuentos. Además, se cuenta
-                con distintos roles para todas las áreas responsables y registros de estos.
+                con <strong class="text-green-400">distintos roles para todas las áreas responsables</strong> y registros de estos.
                 Se integran procesos de ventas mediante Transbank.
             </p>
             <div class="flex gap-4 mt-auto">
