--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -34,16 +34,16 @@ import Proyectos from "../components/Proyectos.astro";
 				Hola, soy José Calderón 👋🏼
 			</h1>
 
-			<h2 class="text-xl sm:text-lg max-w-[600px] text-pretty opacity-90">
-				Egresado de Ingeniería en Informática. De <span
-					class="text-green-400">Melipilla, Chile 🇨🇱</span
-				>. Enfocado en desarrollador <span class="text-green-400"
-					>soluciones innovadoras</span
-				> y <span class="text-green-400">100% funcionales</span>.
-				Especializado en desarrollo <span class="text-green-400"
-					>Front-End</span
-				> y <span class="text-green-400">Base de datos</span>.
-			</h2>
+			<p class="text-xl sm:text-lg max-w-[600px] text-pretty opacity-90">
+				Egresado de Ingeniería en Informática. De <strong
+					class="text-green-400">Melipilla, Chile 🇨🇱</strong
+				>. Enfocado en desarrolladar <strong class="text-green-400"
+					>soluciones innovadoras</strong
+				> y <strong class="text-green-400">100% funcionales</strong>.
+				Especializado en desarrollo <strong class="text-green-400"
+					>Front-End</strong
+				> y <strong class="text-green-400">Base de datos</strong>.
+			</p>
 
 			<nav class="flex flex-wrap justify-left gap-4 mt-4">
 				<Social
@@ -111,38 +111,38 @@ import Proyectos from "../components/Proyectos.astro";
 			
 			<div class="flex flex-col md:flex-row gap-8 items-center">
 				<div class="md:w-2/3">
-					<h3 class="text-xl text-pretty">
+					<p class="text-xl text-pretty">
 						Me llamo José Calderón, tengo 22 años, egresado de la
-						carrera <span class="text-green-400"
-							>Ingeniería en Informática</span
+						carrera <strong class="text-green-400"
+							>Ingeniería en Informática</strong
 						>. Me especializo en el
-						<span class="text-green-400">diseño</span> y <span
+						<strong class="text-green-400">diseño</strong> y <strong
 							class="text-green-400"
-							>desarrollo de soluciones innovadoras</span
+							>desarrollo de soluciones innovadoras</strong
 						> que optimicen procesos y mejoren la experiencia del usuario.
 						<br />
 						<br />
-						Además de mis intereses sobre la informática, me gusta <span
+						Además de mis intereses sobre la informática, me gusta <strong
 							class="text-green-400"
-							>innovar con proyectos únicos</span
-						> y que <span class="text-green-400"
-							>aporten gran valor</span
+							>innovar con proyectos únicos</strong
+						> y que <strong class="text-green-400"
+							>aporten gran valor</strong
 						> a la sociedad, tal fue mi proyecto de titulo que buscaba
 						digitalizar a todos los negocios locales de nuestro entorno
 						para pedir y reservar Pan.
 						<br />
 						<br />
-						Mi <span class="text-green-400"
-							>objetivo como desarrollador</span
-						> es poder contribuir con <span class="text-green-400"
-							>soluciones apropiadas</span
-						> para cada problema que se me presente, <span
-							class="text-green-400">liderar proyectos</span
-						> y <span class="text-green-400"
-							>marcar la diferencia</span
+						Mi <strong class="text-green-400"
+							>objetivo como desarrollador</strong
+						> es poder contribuir con <strong class="text-green-400"
+							>soluciones apropiadas</strong
+						> para cada problema que se me presente, <strong
+							class="text-green-400">liderar proyectos</strong
+						> y <strong class="text-green-400"
+							>marcar la diferencia</strong
 						>
 						frente al resto.
-					</h3>
+					</p>
 				</div>
 				<div class="md:w-1/3 order-1 md:order-1">
 					<img
